# test_ws

./: CMakeLists.txt
boundary_evaluation/: CMakeLists.txt  d
boundary_evaluation/src/: CCircleGridFinder.hpp  boundary_find_urop.cpp  main.cpp  main_6circle.cpp  main_6circle_variable_R.cpp  oldours_pose.txt  ours_pose.txt
boundary_evaluation/src/boundary_gt/: accumulated_points.py  align_and_RMSE.py  boundary.ply  boundary_find_2013.py  filtered_cloud_with_depth_comparison.ply  ring.py
boundary_evaluation/src/boundary_gt/boundary_eval/: align_and_RMSE.py  circle_borders.ply  filtered_cloud_with_colors.ply  make_aligntarget.py  ours_1_boundary.ply  ours_2_boundary.ply  ours_3_boundary.ply  theirs_1_boundary.ply  theirs_2_boundary.ply  theirs_3_boundary.ply
boundary_evaluation/src/boundary_gt/debug/: boundary_points.ply  most_planer_cluster.ply  projected_cloud.ply  removed_line.ply  with_circle_center.ply
boundary_evaluation/src/experiment_environment/10-01/#10/: main_6circle_#10.cpp
boundary_evaluation/src/experiment_environment/10-01/#4/: main_6circle_#4.cpp
boundary_evaluation/src/experiment_environment/10-01/#5/: main_6circle_#5.cpp
boundary_evaluation/src/experiment_environment/10-01/#6/: main_6circle_#6.cpp
boundary_evaluation/src/experiment_environment/10-01/#7/: main_6circle_#7.cpp
boundary_evaluation/src/experiment_environment/10-01/#8/: main_6circle_#8.cpp
boundary_evaluation/src/experiment_environment/10-02/#10/: main_6circle_#10.cpp
boundary_evaluation/src/experiment_environment/10-02/#7/: main_6circle_#7.cpp
boundary_evaluation_2013/: CMakeLists.txt  package.xml
boundary_evaluation_2013/src/: boundary_find_2013.cpp  filtered_boundary_points.cpp
boundary_evaluation_2013_1/src/: boundary_find_2013.cpp  filtered_boundary_points.cpp
ouster_plane_extraction/: CMakeLists.txt  package.xml
ouster_plane_extraction/src/: ouster_plane_extraction.cpp
